--- a/app.json
+++ b/app.json
@@ -1,37 +1,36 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/order/orderIndex",
+
+    "pages/to-trainer/step-three/step-three",
+    "pages/to-trainer/step-four/step-four",
+    "pages/to-trainer/step-two/step-two",
+    "pages/to-trainer/step-one/step-one",
+    "pages/to-trainer/index",
+    "pages/personal-space/index",
+    "pages/history/index",
     "pages/moment-time/detail/detail",
     "pages/user/user",
     "pages/found/found",
-
     "pages/news/chat/index",
-    "pages/personal-space/index",
-
     "pages/withDraw/index",
     "pages/mybag/account-detail/index",
     "pages/mybag/index",
     "pages/news/news-page",
     "pages/setting/index",
     "pages/setting/my-tastes/index",
-    "pages/order/orderIndex",
+
     "pages/order/orderDetail/detail",
     "pages/create-order/index",
     "pages/appraise/index",
     "pages/setting/change-date/index",
     "pages/setting/change-name/index",
-
     "pages/create-order/choose-stadium/stadium",
     "pages/to-trainer/update-trainer/index",
     "pages/create-order/search-stadium/search",
     "pages/training-space/index",
-    "pages/to-trainer/index",
-
     "pages/moment-time/moment-time",
-    "pages/to-trainer/step-three/step-three",
-    "pages/to-trainer/step-two/step-two",
-    "pages/to-trainer/step-four/step-four",
-    "pages/to-trainer/step-one/step-one",
     "pages/login/login",
     "pages/search-page/search-page",
     "pages/logs/logs",
