--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "pages": [
-    "pages/fans/fans",
+
     "pages/index/index",
     "pages/order/orderIndex",
-
+    "pages/fans/fans",
     "pages/to-trainer/step-three/step-three",
     "pages/to-trainer/step-four/step-four",
     "pages/to-trainer/step-two/step-two",
@@ -36,8 +36,8 @@
     "pages/search-page/search-page",
     "pages/logs/logs",
     "pages/search-show/search-show",
-    "pages/mobile/mobile"
-
+    "pages/mobile/mobile",
+    "pages/coupon/coupon"
   ],
   "permission": {
     "scope.userLocation": {
