--- a/project.config.json
+++ b/project.config.json
@@ -32,7 +32,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.10.4",
-	"appid": "wxfa5368fa43713400",
+	"appid": "wxce6593735dc199cc",
 	"projectname": "%E4%BA%9A%E7%B1%B3%E7%A7%91%E6%8A%80mall4j",
 	"debugOptions": {
 		"hidedInDevtools": []
