--- a/app.json
+++ b/app.json
@@ -1,15 +1,18 @@
 {
   "pages": [
-    "pages/user/user",
+    "pages/personal-space/index",
+    "pages/category/index",
     "pages/index/index",
-    "pages/order/orderIndex",
+    "pages/user/user",
     "pages/fans/fans",
+    "pages/order/orderIndex",
+
     "pages/to-trainer/step-three/step-three",
     "pages/to-trainer/step-four/step-four",
     "pages/to-trainer/step-two/step-two",
     "pages/to-trainer/step-one/step-one",
     "pages/to-trainer/index",
-    "pages/personal-space/index",
+
     "pages/history/index",
     "pages/moment-time/detail/detail",
 
@@ -38,6 +41,7 @@
     "pages/search-show/search-show",
     "pages/mobile/mobile",
     "pages/coupon/coupon"
+
   ],
   "permission": {
     "scope.userLocation": {
